--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,8 +45,9 @@ jobs:
     - name: Post tests
       if: always()
       run: |
-          logsPath=$(find . -name "console.log");
-          cat $logsPath | grep Launching
+          sudo docker images
+          logsPath=$(sudo find . -name "console.log");
+          sudo cat $logsPath | sudo grep Launching
     - name: Archive server logs if failed
       if: failure()
       uses: actions/upload-artifact@v2
