--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,10 @@ jobs:
           java-version: ${{ matrix.jdk }}
       - run: unset _JAVA_OPTIONS
       - name: Run tests
-        run: sudo ../scripts/testApp.sh
+        run: |
+          sudo ../scripts/startMinikube.sh
+          sudo ../scripts/installIstio.sh
+          sudo ../scripts/testApp.sh
       - name: Post tests
         if: always()
         run: docker images
