--- a/start/inventory/Dockerfile
+++ b/start/inventory/Dockerfile
@@ -14,5 +14,5 @@ LABEL \
   summary="The inventory microservice from the Microprofile Istio retry fallback guide" \
   description="This image contains the inventory microservice running with the Open Liberty runtime."
 COPY --chown=1001:0 src/main/liberty/config /config/
-COPY --chown=1001:0 target/inventory.war /config/apps
+COPY --chown=1001:0 target/guide-microprofile-istio-retry-fallback-inventory.war /config/apps
 RUN configure.sh
