--- a/start/system/Dockerfile
+++ b/start/system/Dockerfile
@@ -14,5 +14,5 @@ LABEL \
   summary="The system microservice from the Microprofile Istio retry fallback guide" \
   description="This image contains the system microservice running with the Open Liberty runtime."
 COPY --chown=1001:0 src/main/liberty/config /config/
-COPY --chown=1001:0 target/system.war /config/apps
+COPY --chown=1001:0 target/guide-microprofile-istio-retry-fallback-system.war /config/apps
 RUN configure.sh
