--- a/finish/services.yaml
+++ b/finish/services.yaml
@@ -1,5 +1,5 @@
 # tag::gateway[]
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: sys-app-gateway
